# hand_gesture_mountain_car

./: .gitignore  README.md  TODO.md  Untitled.ipynb  car.py  colab_intel_image_classification_with_pytorch.ipynb  config.yaml  data_preprocessing.py  environment.yaml  get_stats.py  grab_images.py  hand_gesture.py  hand_gesture_controll.py  image_classifier.py  intel-image-classification-with-pytorch.ipynb  main.py  mountain_car_play.py  pyproject.toml  stats.pkl  test.py  testing.py  testing_pytoch.ipynb  testing_pytoch.py  testing_pytorch.py  utils.py  utils_classes.py  utils_funcs copy.py  utils_funcs.py
22_11_2022/: 22_11_2022.txt
29_11_2022/: 29_11_2022.txt
back_train/: sedBuZtbI
back_valid/: sedCOT0ya
configs/: training.yaml
dissecting_reinforcement/: Dissecting Reinforcement Learning-Part.1.ipynb
mountain-car-controll/: gesture-controll.py  mountain-car-play.py
resources/: Gym-OpenAI-MountainCar-v0.ipynb  Gym-OpenAI-MountainCar-v0.py  colab_intel_image_classification_with_pytorch.ipynb  hand_gesture_cs230.py
resources/preliminary/: testing.ipynb  testing_pytoch.py
src/: data_preprocessing.py  grab_images.py  hand_gesture_control.py  mountain_car_play.py  train.py  utils_classes.py
src/mountain-car-controll/: README.md  mountain_car_play.py
